finalizando docs da tabela pedidos
